Fix news post spacing

--- a/components/Basement/styles.module.scss
+++ b/components/Basement/styles.module.scss
@@ -175,7 +175,7 @@
 }
 
 .news-post {
-	margin-bottom: 5px;
+	padding-top: 5px;
 
 	&-heading {
 		padding-bottom: 3px;
